--- a/role_gpu/templates/lab_machine_status.yml.j2
+++ b/role_gpu/templates/lab_machine_status.yml.j2
@@ -16,28 +16,11 @@
         memory_util: "N/A"
         encoder_util: "N/A"
         decoder_util: "N/A"
+      gpu_processes: "N/A"
+      gpu_process_info: "N/A"
       nvidia_driver: "N/A"
       cuda_versions: "N/A"
       cudnn_versions: "N/A"
-{% else %}
-{% if hostvars[hostname]["gpu_type"].__class__.__name__ == "AnsibleUnsafeText" %}
-  - {{ hostvars[hostname]["gpu_type"] }}:
-      gpu_mem_usage: 
-        total: "{{ hostvars[hostname]["gpu_mem_usage"]["total"] }}"
-        used: "{{ hostvars[hostname]["gpu_mem_usage"]["used"] }}"
-        free: "{{ hostvars[hostname]["gpu_mem_usage"]["free"] }}"
-      gpu_freq: 
-        sm_clock: "{{ hostvars[hostname]["gpu_freq"]["sm_clock"] }}"
-        mem_clock: "{{ hostvars[hostname]["gpu_freq"]["mem_clock"] }}"
-      gpu_temp: "{{ hostvars[hostname]["gpu_temp"] }}"
-      gpu_util: 
-        gpu_util: "{{ hostvars[hostname]["gpu_util"]["gpu_util"] }}"
-        memory_util: "{{ hostvars[hostname]["gpu_util"]["memory_util"] }}"
-        encoder_util: "{{ hostvars[hostname]["gpu_util"]["encoder_util"] }}"
-        decoder_util: "{{ hostvars[hostname]["gpu_util"]["decoder_util"] }}"
-      nvidia_driver: "{{ hostvars[hostname]["nvidia_driver"] }}"
-      cuda_versions: "{{ hostvars[hostname]["cuda_versions"] }}"
-      cudnn_versions: "{{ hostvars[hostname]["cudnn_versions"] }}"
 {% else %}
 {% for i in range(hostvars[hostname]["gpu_type"] | length) %}
   - {{ hostvars[hostname]["gpu_type"][i] }}:
@@ -54,11 +37,35 @@
         memory_util: "{{ hostvars[hostname]["gpu_util"][i]["memory_util"] }}"
         encoder_util: "{{ hostvars[hostname]["gpu_util"][i]["encoder_util"] }}"
         decoder_util: "{{ hostvars[hostname]["gpu_util"][i]["decoder_util"] }}"
+      gpu_processes: {% if hostvars[hostname]["gpu_processes"] | length <= i -%}
+        "{}"{% else -%}"{{ hostvars[hostname]["gpu_processes"][i] }}"{% endif %}
+      
+      gpu_process_info: "{{ hostvars[hostname]["process_info_dict"] }}"
       nvidia_driver: "{{ hostvars[hostname]["nvidia_driver"] }}"
       cuda_versions: "{{ hostvars[hostname]["cuda_versions"] }}"
       cudnn_versions: "{{ hostvars[hostname]["cudnn_versions"] }}"
 
 {% endfor %}
 {% endif %}
-{% endif %}
 {% endfor %}
+
+{# {% if hostvars[hostname]["gpu_type"].__class__.__name__ == "AnsibleUnsafeText" %}
+  - {{ hostvars[hostname]["gpu_type"] }}:
+      gpu_mem_usage: 
+        total: "{{ hostvars[hostname]["gpu_mem_usage"]["total"] }}"
+        used: "{{ hostvars[hostname]["gpu_mem_usage"]["used"] }}"
+        free: "{{ hostvars[hostname]["gpu_mem_usage"]["free"] }}"
+      gpu_freq: 
+        sm_clock: "{{ hostvars[hostname]["gpu_freq"]["sm_clock"] }}"
+        mem_clock: "{{ hostvars[hostname]["gpu_freq"]["mem_clock"] }}"
+      gpu_temp: "{{ hostvars[hostname]["gpu_temp"] }}"
+      gpu_util: 
+        gpu_util: "{{ hostvars[hostname]["gpu_util"]["gpu_util"] }}"
+        memory_util: "{{ hostvars[hostname]["gpu_util"]["memory_util"] }}"
+        encoder_util: "{{ hostvars[hostname]["gpu_util"]["encoder_util"] }}"
+        decoder_util: "{{ hostvars[hostname]["gpu_util"]["decoder_util"] }}"
+      gpu_processes: "{{ hostvars[hostname]["gpu_processes"] }}"
+      nvidia_driver: "{{ hostvars[hostname]["nvidia_driver"] }}"
+      cuda_versions: "{{ hostvars[hostname]["cuda_versions"] }}"
+      cudnn_versions: "{{ hostvars[hostname]["cudnn_versions"] }}"
+{% else %} #}
